--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==5.1.3
+django-stubs==5.1.1
+django-stubs-ext==5.1.1
 djangorestframework==3.15.2
 Markdown==3.7
 pillow==11.0.0
@@ -7,4 +9,6 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 sqlparse==0.5.2
+types-PyYAML==6.0.12.20240917
+typing_extensions==4.12.2
 tzdata==2024.2
