--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ autobahn==24.4.2
 Automat==24.8.1
 cffi==1.17.1
 channels==4.2.0
+channels_redis==4.2.1
 constantly==23.10.4
 cryptography==43.0.3
 daphne==4.1.2
@@ -15,6 +16,7 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 Markdown==3.7
+msgpack==1.1.0
 pillow==11.0.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
@@ -23,6 +25,7 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 pyOpenSSL==24.2.1
 python-dotenv==1.0.1
+redis==5.2.0
 service-identity==24.2.0
 setuptools==75.6.0
 sqlparse==0.5.2
