--- a/server-pong/.env.example
+++ b/server-pong/.env.example
@@ -4,8 +4,15 @@ DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,localhost
 
 # Configurações do banco de dados
-DB_NAME=ft_transcendence
-DB_USER=postgres
-DB_PASSWORD=your-db-password
+DB_NAME=postgres
+DB_USER=pong
+DB_PASSWORD=pong
 DB_HOST=localhost
 DB_PORT=5432
+
+DB_ENGINE=django.db.backends.postgresql_psycopg2
+POSTGRES_DB=pong
+POSTGRES_USER=pong
+POSTGRES_PASSWORD=pong
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
