--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -7,25 +7,39 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"build:js": "babel src --out-dir dist --copy-files"
 	},
 	"dependencies": {
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-router-dom": "^7.0.2",
+		"@babel/cli": "^7.26.4",
+		"@babel/core": "^7.26.0",
+		"@babel/preset-env": "^7.26.0",
 		"bootstrap": "^5.3.3",
-		"react-bootstrap": "^2.10.5"
+		"react": "^18.3.1",
+		"react-bootstrap": "^2.10.5",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.0.2"
 	},
 	"devDependencies": {
+		"@babel/preset-react": "^7.26.3",
 		"@eslint/js": "^9.15.0",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.15.0",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"globals": "^15.12.0",
+		"postcss": "^8.4.49",
+		"postcss-cli": "^11.0.0",
 		"vite": "^6.0.1"
-	}
+	},
+	"browserslist": [
+		"last 2 versions",
+		"> 0.5%",
+		"not dead",
+		"not op_mini all"
+	]
 }
