--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -15,9 +15,11 @@
 		"@babel/core": "^7.26.0",
 		"@babel/preset-env": "^7.26.0",
 		"bootstrap": "^5.3.3",
+		"i18next": "^24.2.0",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.5",
 		"react-dom": "^18.3.1",
+		"react-i18next": "^15.2.0",
 		"react-router-dom": "^7.0.2"
 	},
 	"devDependencies": {
