--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -14,6 +14,9 @@
 		"@babel/cli": "^7.26.4",
 		"@babel/core": "^7.26.0",
 		"@babel/preset-env": "^7.26.0",
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"bootstrap": "^5.3.3",
 		"i18next": "^24.2.0",
 		"react": "^18.3.1",
