--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -17,6 +17,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"axios": "^1.7.9",
 		"bootstrap": "^5.3.3",
 		"i18next": "^24.2.0",
 		"react": "^18.3.1",
