--- a/server-pong/.gitignore
+++ b/server-pong/.gitignore
@@ -9,7 +9,14 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media
+
+# Ignorar tudo no diretório media
+/media/*
+
+# Exceto o arquivo específico default.png
+!/media/avatars/
+/media/avatars/*
+!/media/avatars/default.png
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
