--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -24,7 +24,8 @@
 		"react-bootstrap": "^2.10.5",
 		"react-dom": "^18.3.1",
 		"react-i18next": "^15.2.0",
-		"react-router-dom": "^7.0.2"
+		"react-router-dom": "^7.0.2",
+		"react-toastify": "^11.0.2"
 	},
 	"devDependencies": {
 		"@babel/preset-react": "^7.26.3",
