--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -25,7 +25,8 @@
 		"react-dom": "^18.3.1",
 		"react-i18next": "^15.2.0",
 		"react-router-dom": "^7.0.2",
-		"react-toastify": "^11.0.2"
+		"react-toastify": "^11.0.2",
+		"sweetalert2": "^11.15.10"
 	},
 	"devDependencies": {
 		"@babel/preset-react": "^7.26.3",
