feat: https for IP-Lan

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=django-insecure-rn9_4g7hoi_0xkvglm0f^3on+qs*m-sln5ucwp1*7vv_7(6pz0)
 DEBUG=True
-ALLOWED_HOSTS=127.0.0.1,localhost
+ALLOWED_HOSTS=127.0.0.1,localhost,192.168.1.138
 
 # Configurações do banco de dados
 DB_NAME=ft_transcendence
