--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   #
   # Django + Channels (Daphne) - Porta 8000 interna
@@ -10,7 +12,6 @@ services:
     volumes:
       - ./server-pong:/app
       - ./server-pong/staticfiles:/app/staticfiles
-      - ./server-pong/certs:/app/certs
       - ./server-pong/media:/app/media
     expose:
       - "8000"
@@ -34,19 +35,21 @@ services:
       - web
 
   #
-  # Nginx - Porta 443 com SSL
+  # Nginx - Porta 443 (SSL) e 80 (redirecionamento)
   #
   nginx:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./server-pong/certs:/etc/nginx/certs
+      - ./server-pong/certs:/etc/nginx/certs       # Certificado e chave autoassinados
       - ./server-pong/staticfiles:/app/staticfiles
       - ./server-pong/media:/app/media
     ports:
-      - "443:443"
+      - "80:80"   # Redireciona para HTTPS
+      - "443:443" # HTTPS
     depends_on:
       - web
+      - frontend
 
   #
   # Banco de Dados PostgreSQL
