--- a/server-pong/env.example
+++ b/server-pong/env.example
@@ -9,3 +9,6 @@ DB_USER=postgres
 DB_PASSWORD=your-db-password
 DB_HOST=localhost
 DB_PORT=5432
+
+EMAIL_HOST_USER=ft.transcendence.42rio@gmail.com
+EMAIL_HOST_PASSWORD=kxmqhkjkvnfqmaoa
