--- a/templates/env.template
+++ b/templates/env.template
@@ -6,7 +6,7 @@ ALLOWED_HOSTS=127.0.0.1,localhost,${IP_ADDRESS}
 DB_NAME=ft_transcendence
 DB_USER=postgres
 DB_PASSWORD=123456
-DB_HOST=db
+DB_HOST=localohst
 DB_PORT=5432
 
 EMAIL_HOST_USER=ft.transcendence.42rio@gmail.com
