--- a/templates/nginx.conf.template
+++ b/templates/nginx.conf.template
@@ -14,19 +14,19 @@ http {
         listen 443 ssl;
         server_name ${IP_ADDRESS};
 
-        ssl_certificate /etc/nginx/certs/cert.pem;
+        ssl_certificate     /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
 
-        # Bloco para servir arquivos estáticos
+        # Arquivos estáticos
         location /static/ {
-            alias /app/staticfiles/;  # caminho interno no contêiner
+            alias /app/staticfiles/;
         }
 
         location /media/ {
             alias /app/media/;
         }
 
-        # Rota para o frontend (React)
+        # Frontend React (porta 3000 em HTTP interno)
         location / {
             proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
@@ -38,7 +38,7 @@ http {
             proxy_set_header X-Forwarded-Proto https;
         }
 
-        # Rota para a API Django
+        # API Django (porta 8000 em HTTP interno)
         location /api/ {
             proxy_pass http://web:8000;
             proxy_http_version 1.1;
@@ -48,7 +48,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Rota para o WebSocket do Django Channels
+        # WebSocket do Django Channels
         location /ws/ {
             proxy_pass http://web:8000;
             proxy_http_version 1.1;
