--- a/templates/env.template
+++ b/templates/env.template
@@ -9,5 +9,9 @@ DB_PASSWORD=123456
 DB_HOST=localohst
 DB_PORT=5432
 
+POSTGRES_DB=ft_transcendence
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123456
+
 EMAIL_HOST_USER=ft.transcendence.42rio@gmail.com
 EMAIL_HOST_PASSWORD=kxmqhkjkvnfqmaoa
