--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     # SERVIDOR HTTPS
     server {
         listen 443 ssl;
-        server_name 192.168.1.138;
+        server_name 192.168.1.138;  # IP no server_name
 
         ssl_certificate     /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
@@ -30,11 +30,11 @@ http {
         location / {
             proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
-            proxy_set_header Upgrade ;
+            proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
-            proxy_set_header Host ;
-            proxy_set_header X-Real-IP ;
-            proxy_set_header X-Forwarded-For ;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
 
@@ -42,21 +42,21 @@ http {
         location /api/ {
             proxy_pass http://web:8000;
             proxy_http_version 1.1;
-            proxy_set_header Host ;
+            proxy_set_header Host $host;
             proxy_set_header X-Forwarded-Proto https;
-            proxy_set_header X-Forwarded-For ;
-            proxy_set_header X-Real-IP ;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         # WebSocket do Django Channels
         location /ws/ {
             proxy_pass http://web:8000;
             proxy_http_version 1.1;
-            proxy_set_header Upgrade ;
+            proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
-            proxy_set_header Host ;
-            proxy_set_header X-Real-IP ;
-            proxy_set_header X-Forwarded-For ;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
     }
@@ -65,6 +65,6 @@ http {
     server {
         listen 80;
         server_name 192.168.1.138;
-        return 301 https://;
+        return 301 https://$host$request_uri;
     }
 }
