--- a/templates/config.js.template
+++ b/templates/config.js.template
@@ -10,13 +10,12 @@ export const API_BASE_URL = "https://${IP_ADDRESS}";
 export const DEFAULT_AVATAR = `${API_BASE_URL}/media/avatars/default.png`;
 
 export const getAvatar = (avatarPath) => {
-  if (!avatarPath || avatarPath === "/media/") {
-    return DEFAULT_AVATAR;
-  }
+  if (!avatarPath) return DEFAULT_AVATAR;
 
+  // Garante que o caminho final seja correto
   return avatarPath.startsWith("/media/")
-    ? `${API_BASE_URL}${avatarPath}`
-    : `${API_BASE_URL}/media/${avatarPath}`;
+    ? avatarPath
+    : `/media/${avatarPath}`;
 };
 
 export const getWsUrl = (path = "") => {
