--- a/client-pong/package.json
+++ b/client-pong/package.json
@@ -19,6 +19,7 @@
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"axios": "^1.7.9",
 		"bootstrap": "^5.3.3",
+		"core-js": "^3.40.0",
 		"i18next": "^24.2.0",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.5",
@@ -26,6 +27,7 @@
 		"react-i18next": "^15.2.0",
 		"react-router-dom": "^7.0.2",
 		"react-toastify": "^11.0.2",
+		"regenerator-runtime": "^0.14.1",
 		"sweetalert2": "^11.15.10"
 	},
 	"devDependencies": {
