--- a/templates/config.js.template
+++ b/templates/config.js.template
@@ -19,7 +19,7 @@ export const getAvatar = (avatarPath) => {
 };
 
 export const getWsUrl = (path = "") => {
-  return "wss://${IP_ADDRESS}" + path;  // e.g. /ws/chat/
+  return "wss://${IP_ADDRESS}:4443" + path;  // e.g. /ws/chat/
 };
 
 export default API_BASE_URL;
