ajust docker to new front end

--- a/templates/docker-compose.yml.template
+++ b/templates/docker-compose.yml.template
@@ -4,7 +4,6 @@ services:
   #
   web:
     build: ./server-pong
-    command: ["/wait-for-it.sh", "db", "5432", "--", "daphne", "-b", "0.0.0.0", "-p", "8000", "setup.asgi:application"]
     environment:
       - DJANGO_SETTINGS_MODULE=setup.settings
     env_file:
@@ -22,17 +21,17 @@ services:
   #
   # React (Vite) - Porta 3000 interna
   #
-  frontend:
-    build:
-      context: ./client-pong
-      target: development
-    volumes:
-      - react_app_data:/app
-    ports:
-      - "3000:3000"
-    depends_on:
-      - web
-      - db
+  #frontend:
+  #  build:
+  #    context: ./client-pong
+  #    target: development
+  #  volumes:
+  #    - react_app_data:/app
+  #  ports:
+  #    - "3000:3000"
+  #  depends_on:
+  #    - web
+  #    - db
 
   #
   # Nginx - Porta 443 (SSL) e 80 (redirecionamento)
@@ -49,7 +48,7 @@ services:
       - "4443:443"
     depends_on:
       - web
-      - frontend
+    #  - frontend
 
   #
   # Banco de Dados PostgreSQL
@@ -116,9 +115,9 @@ volumes:
       device: "$VOLUME_BASE_PATH/redis_data"
       o: bind
 
-  react_app_data:
-    driver: local
-    driver_opts:
-      type: none
-      device: "$VOLUME_BASE_PATH/react_app"
-      o: bind
+  #react_app_data:
+  #  driver: local
+  #  driver_opts:
+  #    type: none
+  #    device: "$VOLUME_BASE_PATH/react_app"
+  #    o: bind
