--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
   #
   web:
     build: ./server-pong
-    command: ["/wait-for-it.sh", "db", "5432", "--", "daphne", "-b", "0.0.0.0", "-p", "8000", "setup.asgi:application"]
     environment:
       - DJANGO_SETTINGS_MODULE=setup.settings
     env_file:
@@ -22,17 +21,17 @@ services:
   #
   # React (Vite) - Porta 3000 interna
   #
-  frontend:
-    build:
-      context: ./client-pong
-      target: development
-    volumes:
-      - react_app_data:/app
-    ports:
-      - "3000:3000"
-    depends_on:
-      - web
-      - db
+  #frontend:
+  #  build:
+  #    context: ./client-pong
+  #    target: development
+  #  volumes:
+  #    - react_app_data:/app
+  #  ports:
+  #    - "3000:3000"
+  #  depends_on:
+  #    - web
+  #    - db
 
   #
   # Nginx - Porta 443 (SSL) e 80 (redirecionamento)
@@ -49,7 +48,7 @@ services:
       - "4443:443"
     depends_on:
       - web
-      - frontend
+    #  - frontend
 
   #
   # Banco de Dados PostgreSQL
@@ -78,47 +77,47 @@ services:
       retries: 5
 
 #
-# Volumes usando a variável /goinfre/diogo/ft_transcendence
+# Volumes usando a variável /Users/andrealmeida/goinfre/andrealmeida/ft_transcendence
 #
 volumes:
   django_app_data:
     driver: local
     driver_opts:
       type: none
-      device: "/goinfre/diogo/ft_transcendence/django_app"
+      device: "/Users/andrealmeida/goinfre/andrealmeida/ft_transcendence/django_app"
       o: bind
 
   django_static_data:
     driver: local
     driver_opts:
       type: none
-      device: "/goinfre/diogo/ft_transcendence/staticfiles"
+      device: "/Users/andrealmeida/goinfre/andrealmeida/ft_transcendence/staticfiles"
       o: bind
 
   django_media_data:
     driver: local
     driver_opts:
       type: none
-      device: "/goinfre/diogo/ft_transcendence/media"
+      device: "/Users/andrealmeida/goinfre/andrealmeida/ft_transcendence/media"
       o: bind
 
   postgres_data:
     driver: local
     driver_opts:
       type: none
-      device: "/goinfre/diogo/ft_transcendence/postgres_data"
+      device: "/Users/andrealmeida/goinfre/andrealmeida/ft_transcendence/postgres_data"
       o: bind
 
   redis_data:
     driver: local
     driver_opts:
       type: none
-      device: "/goinfre/diogo/ft_transcendence/redis_data"
+      device: "/Users/andrealmeida/goinfre/andrealmeida/ft_transcendence/redis_data"
       o: bind
 
-  react_app_data:
-    driver: local
-    driver_opts:
-      type: none
-      device: "/goinfre/diogo/ft_transcendence/react_app"
-      o: bind
+  #react_app_data:
+  #  driver: local
+  #  driver_opts:
+  #    type: none
+  #    device: "/Users/andrealmeida/goinfre/andrealmeida/ft_transcendence/react_app"
+  #    o: bind
