--- a/server-pong/Dockerfile
+++ b/server-pong/Dockerfile
@@ -7,7 +7,7 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 
 # Instala dependências
-RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
+RUN apk add --no-cache postgresql-dev gcc python3-dev musl-dev
 
 COPY requirements.txt .
 RUN pip install --upgrade pip
