--- a/templates/env.template
+++ b/templates/env.template
@@ -9,7 +9,7 @@ DB_PASSWORD=123456
 DB_HOST=db
 DB_PORT=5432
 
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 POSTGRES_DB=ft_transcendence
